--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "ISC",
   "dependencies": {
     "camunda-external-task-client-js": "^1.1.1",
+    "cryptiles": "^4.1.3",
+    "hoek": "^6.1.2",
+    "mime": "^2.4.0",
     "unirest": "^0.5.1"
   }
 }
