--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "camunda-external-task-client-js": "^1.1.1",
     "cryptiles": "^4.1.3",
+    "express": "^4.16.4",
     "hoek": "^6.1.2",
     "mime": "^2.4.0",
     "unirest": "^0.5.1"
