--- a/app.json
+++ b/app.json
@@ -4,5 +4,11 @@
     "repository": "https://github.com/DigiBP/digibp-camunda-external-node-task",
     "logo": "https://avatars3.githubusercontent.com/u/25099178",
     "keywords": ["camunda", "node", "express", "heroku"],
-    "image": "heroku/nodejs"
+    "image": "heroku/nodejs",
+    "env": {
+        "CAMUNDA_REST_URL": {
+          "description": "Camunda REST URL.",
+          "value": "https://digibp.herokuapp.com/rest"
+        }
+    }
 }
