--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
   "author": "Andreas Martin",
   "license": "ISC",
   "dependencies": {
-    "camunda-external-task-client-js": "^1.1.1",
-    "cryptiles": "^4.1.3",
-    "express": "^4.16.4",
-    "hoek": "^6.1.2",
-    "mime": "^2.4.0",
-    "unirest": "^0.5.1",
-    "tunnel-agent": ">=0.6.0"
+    "camunda-external-task-client-js": "^1.3.0",
+    "express": "^4.17.1",
+    "unirest": "^0.6.0"
   }
 }
