--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "author": "Andreas Martin",
   "license": "ISC",
+  "private": true,
   "dependencies": {
     "camunda-external-task-client-js": "^1.3.0",
     "express": "^4.17.1",
