--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "env": {
         "CAMUNDA_REST_URL": {
           "description": "Camunda REST URL.",
-          "value": "https://digibp.herokuapp.com/rest"
+          "value": "https://digibp.herokuapp.com/engine-rest"
         }
     }
 }
