--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digibp-camunda-faas",
+  "name": "digibp-camunda-external-node-task",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
-    "camunda-external-task-client-js": "^1.3.0",
+    "camunda-external-task-client-js": "^2.0.0",
     "express": "^4.17.1",
     "unirest": "^0.6.0"
   }
